Privacy payload plugin (#2377)
* Hook up an empty plugin for future unrestricted privacy encryption

Skeleton implementation for PrivacyPayloadEncryptionProvider
Wire up unencrypted serialization for private transactions

Signed-off-by: Antony Denyer <git@antonydenyer.co.uk>

* wire up simple privacy plugin in acceptance tests

Signed-off-by: Antony Denyer <git@antonydenyer.co.uk>

* Pass the marker transaction through to plugin

Signed-off-by: Antony Denyer <git@antonydenyer.co.uk>

* Move getters/setters into consistent place

Signed-off-by: Antony Denyer <git@antonydenyer.co.uk>

* Rename plugin methods and config to be more generic

- remove protections around transaction.restriction
- the plugin is responsible for this
- make plugin more generic so could be used for restricted/unrestricted

Signed-off-by: Antony Denyer <git@antonydenyer.co.uk>

* Provide more meaningful error message

Signed-off-by: Antony Denyer <git@antonydenyer.co.uk>

* Fix up test naming to match impl naming

Signed-off-by: Antony Denyer <git@antonydenyer.co.uk>

* Rename UNRESTRICTED_PRIVACY to PLUGIN_PRIVACY

Signed-off-by: Antony Denyer <git@antonydenyer.co.uk>

* fix typo in PrivacyParmeters::toString

Signed-off-by: Antony Denyer <git@antonydenyer.co.uk>

* Fix exception messages to be PrivacyPlugin

Signed-off-by: Antony Denyer <git@antonydenyer.co.uk>

* Remove blockNumber from getPrivateTransactionFromPayload

Signed-off-by: Antony Denyer <git@antonydenyer.co.uk>